fix popup z-index and layer overlay

--- a/src/Components/market.css
+++ b/src/Components/market.css
@@ -12,19 +12,19 @@
   border: 10px solid #fff;
   border-top: 40px solid #f29718;
   border-bottom: 25px solid rgb(255 149 0);
-  height: 500px;
+  height: 530px;
 }
 .overlay-2 {
   position: absolute;
   width: 308px;
   height: 140%;
-  top: -18%;
+  top: -20%;
   left: 0px;
   transition: all 0.3s ease-in-out;
   z-index: 1;
 }
 .product-img-div:hover > .overlay-2 {
-  height: 244%;
+  height: 260%;
   background-color: rgba(0, 0, 0, 0.2);
 }
 .product-container {
@@ -99,25 +99,7 @@
   font-family: 'Source Sans Pro', sans-serif;
   text-transform: capitalize;
 }
-.pop-up {
-  position: fixed;
-  width: 300px;
-  top: 0;
-  left: 40%;
-  z-index: 1;
-  border: 10px solid white;
-}
-.layer {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgb(0 0 0 / 70%);
-  z-index: 0;
-}
+
 .cart-off {
   color: #ff9500;
   background: white;
@@ -148,4 +130,65 @@
     grid-template-columns: 1fr;
     margin: 0 50px;
   }
+}
+
+.pop-up {
+  position: fixed;
+  width: 300px;
+  top: 0;
+  left: 40%;
+  z-index: 5;
+  border: 10px solid white;
+  display: flex;
+  flex-direction: column;
+  margin: 10px 15px;
+  align-items: center;
+  border: 10px solid #fff;
+  border-top: 40px solid #f29718;
+  border-bottom: 25px solid rgb(255 149 0);
+}
+.product-img-div-pop-up {
+  position: relative;
+  height: 250px;
+}
+
+.product-img-div-pop-up p {
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  padding: 5px;
+  background-color: rgb(255 149 0);
+  color: white;
+  font-weight: 900;
+}
+
+.product-img-div-pop-up img {
+  width: 100%;
+  height: 250px;
+}
+
+.product-desc-div-pop-up {
+  background-color: rgb(255 149 0);
+  height: 100%;
+  width: 100%;
+  text-align: start;
+  color: white;
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 14px;
+  box-shadow: rgb(0 0 0 / 6%) 0px 8px 8px 3px inset;
+}
+.layer {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(0 0 0 / 70%);
+  z-index: 4;
 }
